<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">智能美发APP</string>
    <string name="account">请输入登录的账号</string>
    <string name="password">请输入登录密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="exit">退出登录</string>
    <string name="reset_pwd">修改密码</string>
    <string name="update_info">修改个人信息</string>
    <string name="course_add">添加课程</string>
    <string name="course_select">选择课程</string>
    <string name="all_select">已选课程</string>
    <string name="send_kouling">发布签到</string>
    <string name="sign_in">签到</string>
    <string name="view_kouling">查看签到</string>
    <string name="register_btn_sure">注册</string>
    <string name="register_btn_cancel">取消</string>
    <string name="loading">正在加载数据</string>
    <string name="re_username">请输入您的用户名</string>
    <string name="re_password">请输入您的密码</string>
    <string name="re_password2">请确认您的密码</string>
    <string name="re_studentId">请输入您的学号</string>
    <string name="re_realName">请输入您的姓名</string>

    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
    <string name="pwd_not_fit_user">密码不正确，请重新输入！</string>
    <string name="pwd_new_empty">新密码为空，请重新输入！</string>
    <string name="pwd_check_empty">密码确认为空，请重新输入！</string>
    <string name="stuid_check_empty">学号为空，请重新输入！</string>
    <string name="realname_check_empty">姓名为空，请重新输入！</string>
    <string name="pwd_not_the_same">密码确认不正确，请重新输入密码！</string>
    <string name="register_fail">注册用户失败，请重新尝试！</string>
    <string name="register_success">注册成功！</string>
    <string name="name_already_exist">用户名【<xliff:g example="tom" id="id1">%1$s</xliff:g>】已存在，请重新输入！</string>


    <string name="menu_bottom_navigation1">首页</string>
    <string name="menu_bottom_navigation2">视频</string>
    <string name="menu_bottom_navigation3">创作</string>
    <string name="menu_bottom_navigation4">我的</string>
    <string name="menu_bottom_navigation0">我的发廊</string>

    <string name="item_title_1">导航1</string>
    <string name="item_title_2">导航2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
